# pytaq

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
Docs_new/Samples/micro/: Microsecond.ipynb  eff_spreads1.py  eff_spreads2.py  eff_spreads3.py  nbbo.py  nbbo_symbols.py  off_nbbo1.py  off_nbbo2.py  postgresql.py  quote.py  rs_pi1.py  rs_pi2.py  rs_pi3.py  saspy.py  spreads1.py  spreads2.py  trade.py  trade_nbbo1.py  trade_nbbo2.py
Docs_new/_build/doctrees/: averages.doctree  connecting.doctree  effective spreads.doctree  environment.pickle  getting data.doctree  index.doctree  introduction copy 2.doctree  introduction.doctree  introductionnn.doctree  modules.doctree  modulesss.doctree  nbbo symbols.doctree  nbbo tables.doctree  official complete nbbo tables.doctree  postgresql.doctree  pstgresql.doctree  (+8 more)
Docs_new/source/: averages.rst  conf.py  connecting.rst  index.rst  nbbo symbols.rst  nbbo tables.rst  official complete nbbo tables.rst  trade nbbo tables.rst  trade tables.rst
docs/: Makefile  index.md
docs/source/: conf.py  getting_started.rst  index.rst  pytaq_overview.rst
pytaq/: __init__.py  taq_daily.py
pytaq/cleaning/: merge_quotes_nbbo.py  merge_trades_nbbo.py  merge_trades_official_nbbo.py  timestamps.py
pytaq/extract/: common.py  hj_defaults.py  nbbo.py  official_nbbo.py  postgresql.py  quotes.py  test_quotes.py  trades.py
pytaq/metrics/: averages.py  effective_spreads.py  locks_crosses.py  quoted_spreads.py  rs_and_pi.py  signs.py  test_averages.py
pytaq/utils/: float_approx.py  test_time_to_sql.py  time_to_sql.py
(+29 files in other folders)
