[tool.poetry]
name = "pytaq"
version = "0.2.0"
description = "Module to process NYSE TAQ data"
authors = ["Vincent Grégoire <vincent.gregoire@hec.ca>"]
license = "3-Clause BSD License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
pandas = "^2.1.3"
numpy = "^1.26.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pyarrow = "^14.0.1"
scipy = "^1.11.3"
pandas-stubs = "^2.1.1.230928"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
